# Mosaic3D

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  README.md  README_DATASET.md  create_thumbnails.py  eval_masks.py  index.html  pyproject.toml  requirements.txt  setup.py  vis.py  vis_attn.py
3d/: 2azQ1b91cZZ_region0_a_billard_table.viser  2azQ1b91cZZ_region0_original.viser  2azQ1b91cZZ_region0_soft.viser  41125696_dish_soap.viser  41125696_floor.viser  41125696_original.viser  41125696_oven.viser  41125696_soft.viser  41125696_trashcan.viser  scene0011_00_A_glowing_screen_that_plays_moving_images_and_sounds,_bringing_stories_and_news_into_your_space_at_the_press_of_a_button..viser  scene0011_00_A_place_where_flavors_come_alive,_tools_meet_hands,_and_warmth_fills_the_air—where_creation,_comfort,_and_conversation_blend_effortlessly..viser  scene0011_00_a_suitable_spot_for_a_cup.viser  scene0011_00_a_trash_can.viser  scene0011_00_original.viser  scene0011_00_sitting.viser  scene0030_00_cushioned_furniture.viser  scene0030_00_dark_surface_for_writing_and_erasing_chalked_content.viser  scene0030_00_original.viser  scene0030_00_reading.viser  scene0474_00_a_portable_storage_carried_on_the_back.viser  scene0474_00_original.viser  scene0474_00_soft.viser  scene0474_00_workstation.viser  scene_03000@room_171_door.viser  scene_03000@room_171_food_and_plate.viser  scene_03000@room_171_original.viser  scene_03000@room_171_pillow.viser  scene_03000@room_171_side_tables.viser
configs/: eval.yaml  train.yaml
configs/callbacks/: lr_monitor_wrapper.yaml  reduced_logging.yaml  rich_progress_bar_slow.yaml  tqdm_progress_bar.yaml
configs/data/: ar+ma+st+sc++.yaml  ar+sc++.yaml  arkitscenes.yaml  embodiedscan.yaml  embodiedscan_anon.yaml  eth3d.yaml  leo.yaml  leo_anon.yaml  mask_regionplc_openvocab.yaml  mask_scannet_125k.yaml  mask_scannet_gt.yaml  mask_scannet_seem_panoptic_125k.yaml  mask_scannet_segment3d_gathered.yaml  matterport3d.yaml  mmscan.yaml  mmscan_anon.yaml  msc_regionplc_openvocab.yaml  msc_scannet_seem_panoptic_125k.yaml  ours_base10.yaml  ours_base12.yaml  ours_base15.yaml  ours_openvocab-panoptic_125k.yaml  ours_openvocab-panoptic_125k_aug.yaml  ours_openvocab-seem-panoptic_125k.yaml  ours_openvocab-seem_125k.yaml  ours_openvocab.yaml  ours_openvocab_125k.yaml  ours_openvocab_instance.yaml  ours_openvocab_instance_scannet200.yaml  ours_openvocab_legacy.yaml  ours_openvocab_scannet200.yaml  ov3d_base10.yaml  ov3d_base12.yaml  ov3d_base15.yaml  ov3d_openvocab.yaml  ov3d_openvocab_anon.yaml  ptv3_transforms.yaml  regionplc.yaml  regionplc_base10.yaml  regionplc_base12.yaml  (+43 more)
configs/experiment/: mask3d_scannet20.yaml  mask3d_scannet200.yaml  ov3d.yaml  ov3d_openvocab.yaml  regionplc.yaml  regionplc_openvocab.yaml  regionplc_ours.yaml  regionplc_ours_openvocab_instance.yaml  segment3d_scannet.yaml  segment3d_scannetpp.yaml  train_convunet_transformer_scannet.yaml  train_opensegment3d_scannet.yaml  train_ptv3_scannet.yaml  train_regionplc_multidata.yaml  train_regionplc_multidata_ppt.yaml  train_regionplc_scannet.yaml  (+7 more)
cvpr2025/: auto_eval.py  caption_stat.yaml  copy_ckpt.py  eval_ma.sh  experiment_spec.yaml  mask_stat.py  print_stat.py  rebuttal.sh
docker/: Dockerfile  Dockerfile_default  Dockerfile_segment3d  docker_build.sh  docker_run.sh
notebooks/: arkit_caption3d.py  clip_speed_benchmark.py  multiview_gemma3_captions.py  scannet_caption3d.py  visualize_embodiedscan.ipynb  visualize_segment3d.ipynb  viz_batched_caption3d.py  viz_caption3d.py
scripts/: analyze_filtered_caption.py  data_sanity_check.py  eval_masks.py  extract_text_embeddings.py  mask_mapping.py  resume_test.sbatch  run_interactive.sh  setup_interactive.sh  train.sbatch  train_gsai.sbatch  train_multinode.sbatch  train_warp.sbatch
src/: eval.py  train.py
tests/: test_avg_pool.py  test_caption_head.py  test_caption_loss.py  test_clip_alignment.py  test_collate.py  test_datamodules.py  test_mask3d.py  test_mean_pool.py  test_multiple_val.py  test_pointconv.py  test_regionplc.py  test_scannet.py  test_transform.py  test_voxelize.py
(+328 files in other folders)
