[project]
name = "Mosaic3d"
version = "0.1.0"
description = "Mosaic3D: open-vocabulary 3D neural network foundational models and datasets"
requires-python = ">=3.8"
dependencies = [
    # PyTorch ecosystem
    "torch>=2.2.2,<2.3",
    "torchvision>=0.15.0",
    "lightning>=2.2,<2.3",
    "torchmetrics>=0.11.4",
    "torch-geometric",
    "torch-cluster",
    "torch-scatter",

    # Hydra
    "hydra-core==1.3.2",
    "hydra-colorlog==1.2.0",
    "hydra-optuna-sweeper==1.2.0",

    # Loggers
    "wandb",

    # Utils
    "rootutils",
    "rich",
    "jaxtyping",

    # RegionPLC dependencies
    "numpy<2",
    "spconv-cu120",
    "easydict",
    "pyyaml",
    "tqdm",
    "scipy",
    "plyfile",
    "imageio",
    "matplotlib",
    "transformers",
    "clip @ git+https://github.com/openai/CLIP.git",
    "einops",
    "open3d==0.18.0",
    "natsort",
    "scikit-image",
    "open_clip_torch",

    # Segment3D dependencies
    "cuml-cu12",
    "loguru",
    "albumentations",
    "pyviz3d",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "pre-commit",
    "fire",
    "overrides",
    "gdown",
]

[project.urls]
Homepage = "https://github.com/NVIDIA/Mosaic3D"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--durations=0",
  "--strict-markers",
  "--doctest-modules",
]

filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]

log_cli = true
markers = [
  "slow: slow tests",
]
minversion = "6.0"
testpaths = "tests/"

[tool.coverage.report]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "raise NotImplementedError()",
    "if __name__ == .__main__.:",
]

[tool.black]
line-length = 99
