[project]
name = "Mosaic3D"
version = "0.1.0"
description = "Mosaic3D: open-vocabulary 3D neural network foundational models and datasets"
requires-python = ">=3.8"
dependencies = [
    # PyTorch ecosystem
    # TODO(cchoy): Upgrade the torch version
    "torch>=2.2.2,<2.8",
    "torchvision>=0.15.0",
    "lightning>=2.2,<2.3",
    "torchmetrics>=0.11.4",
    "torch-geometric",
    # "torch-cluster",
    "torch-scatter",

    # Hydra
    "hydra-core==1.3.2",
    "hydra-colorlog==1.2.0",
    "hydra-optuna-sweeper==1.2.0",

    # 3D ConvNet
    "spconv-cu120",

    # Essentials
    "packaging",
    "numpy<2",
    "easydict",
    "pyyaml",
    "tqdm",
    "scipy",

    # 3D Utils
    "plyfile",
    "open3d==0.18.0",
    "natsort",
    "scikit-image",
    "matplotlib",
    "pyviz3d",

    # Loggers
    "wandb",

    # Utils
    "rootutils",
    "rich",
    "jaxtyping",
    "imageio",
    "einops",
    "natsort",
    "scikit-image",

    # CLIP
    "accelerate>=0.26.0",
    "flash-attn",
    "transformers",
    # SigLIPv2 in the latest transformers
    # "transformers @ git+https://github.com/huggingface/transformers@v4.49.0-SigLIP-2",
    "clip @ git+https://github.com/openai/CLIP.git",
    "open_clip_torch",

    # CUDA DBScan Clustering
    "cuml-cu12",
]

[project.optional-dependencies]
mask_transformers=[
    "flash-attn",
    "open_clip_torch",
    "timm",
]
dev = [
    "pytest",
    "black",
    "pre-commit",
    "fire",
    "overrides",
    "gdown",
    "jupyter",
    "ipykernel",
    "plotly",
    "ipdb",
]

[project.urls]
Homepage = "https://github.com/NVIDIA/Mosaic3D"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--durations=0",
  "--strict-markers",
  "--doctest-modules",
]

filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]

log_cli = true
markers = [
  "slow: slow tests",
]
minversion = "6.0"
testpaths = "tests/"

[tool.coverage.report]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "raise NotImplementedError()",
    "if __name__ == .__main__.:",
]

[tool.black]
line-length = 99
